--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
+                    android:id="@+id/show_year"
                     android:layout_width="wrap_content"
                     android:layout_height="32dp"
                     android:gravity="bottom"
@@ -44,6 +45,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
+                    android:id="@+id/show_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="12月13日周五"
@@ -96,14 +98,12 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-
-                <androidx.recyclerview.widget.RecyclerView
+                <androidx.viewpager2.widget.ViewPager2
                     android:id="@+id/date_list"
                     android:layout_width="match_parent"
                     android:layout_height="280dp"
                     android:layout_marginTop="16dp"
                     app:layout_constraintTop_toBottomOf="@+id/month_year" />
-
 
                 <TextView
                     android:id="@+id/btn_cancel"
