--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="text_main">#333333</color>
     <color name="text_secondary">#666666</color>
     <color name="text_about">#999999</color>
+    <color name="text_disable">#bbbbbb</color>
     <color name="text_link">#007ffc</color>
 </resources>
