--- a/app/src/main/res/layout/date_picker_dialog.xml
+++ b/app/src/main/res/layout/date_picker_dialog.xml
@@ -112,7 +112,7 @@
                     android:gravity="center_vertical"
                     android:paddingStart="16dp"
                     android:paddingEnd="16dp"
-                    android:text="cancel"
+                    android:text="@string/cancel"
                     android:textColor="@color/colorPrimary"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -128,7 +128,7 @@
                     android:gravity="center_vertical"
                     android:paddingStart="16dp"
                     android:paddingEnd="16dp"
-                    android:text="ok"
+                    android:text="@string/ok"
                     android:textColor="@color/colorPrimary"
                     android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -136,7 +136,6 @@
                     app:layout_constraintTop_toBottomOf="@+id/month_view" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
