--- a/app/src/main/res/layout/item_day.xml
+++ b/app/src/main/res/layout/item_day.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="40dp"
     android:layout_height="40dp"
+    android:foreground="?android:attr/selectableItemBackground"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="2dp">
