--- a/app/src/main/res/layout/item_day.xml
+++ b/app/src/main/res/layout/item_day.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/item_day"
     android:layout_width="40dp"
     android:layout_height="40dp"
     android:foreground="?android:attr/selectableItemBackground"
@@ -11,6 +12,7 @@
         android:id="@+id/date_day"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:text="30"
         android:textColor="@color/text_main" />
 
